--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,7 @@ nav ul li a:hover::after {
                         <span class="time-label">Days</span>
                     </div>
                 </div>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeUJzSGbgums6HJiaEZitjcIY1ywG8h9l4uPLXe-Dfqi5Sumw/viewform" class="enroll-btn">Enroll Now</a>
+                <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_QFJHgS2S79FaM6" async> </script> </form>
             </div>
         </div>
         <div class="gradient-orbs">
